--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Leland L. Fleming</h1>
-				<p> I'm a neuroscience Ph.D. candidate at the <a href="https://www.uab.edu/medicine/home/" class="ext" target="_blank"><b>University of Alabama at Birmingham School of Medicine</b></a>, in the lab of Dr. Kristina Visscher.  I study how changes in sensory experience impact the structure and function of the brain.. <a href="/about">Read more about my life...</a></p>
+				<p> I'm a neuroscience Ph.D. candidate at the <a href="https://www.uab.edu/medicine/home/" class="ext" target="_blank"><b>University of Alabama at Birmingham School of Medicine</b></a>, in the lab of Dr. Kristina Visscher.  I study how changes in sensory experience impact the structure and function of the brain.
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
