--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 		<footer>
     			<ul>
 
-			<li><a href="mailto:utooley@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
+			<li><a href="mailto:lelandfleming123@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
 
-			<li><a href="https://scholar.google.com/citations?user=OJbNvAQAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
+			<li><a href="https://scholar.google.com/citations?user=0jRu1BEAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
 
-			<li><a href="https://github.com/utooley" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
+			<li><a href="https://github.com/lelandfleming" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
 
-			<li><a href="https://twitter.com/utooley" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
+			<li><a href="https://twitter.com/1lelandfleming" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
 
 				</ul>
 		</footer>
