--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Leland L. Fleming</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/icons/css/academicons.min.css"/>
 	</head>
 	<body>
 		<nav>
