--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link rel="stylesheet" href="/icons/css/academicons.min.css"/>
+		<script defer src="/icons/fontawesome/on-server/js/fontawesome-all.js"></script>
 	</head>
 	<body>
 		<nav>
@@ -18,20 +19,24 @@
     		<div class="blurb">
         		<h1>Leland L. Fleming</h1>
 				<p> I'm a neuroscience Ph.D. candidate at the <a href="https://www.uab.edu/medicine/home/" class="ext" target="_blank"><b>University of Alabama at Birmingham School of Medicine</b></a>, in the lab of Dr. Kristina Visscher.  I study how changes in sensory experience impact the structure and function of the brain.
-    		</div><!-- /.blurb -->
+</div><!-- /.blurb -->
+
 			</div><!-- /.container -->
 			<footer>
-				<ul>
+	    		<ul>
 
-				<li><a href="mailto:lelandfleming123@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
+				<li><a href="mailto:utooley@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://scholar.google.com/citations?user=0jRu1BEAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
+				<li><a href="https://scholar.google.com/citations?user=OJbNvAQAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://github.com/lelandfleming" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
+				<li><a href="https://github.com/utooley" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://twitter.com/1lelandfleming" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
+				<li><a href="https://twitter.com/utooley" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
+
+
+
+
 
 				</ul>
 			</footer>
-	</body>
 </html>
