--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<li><a href="https://github.com/lelandfleming" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
 
-			<li><a href="https://twitter.com/lelandfleming" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
+			<li><a href="https://twitter.com/1lelandfleming" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
 
 
 
