--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link rel="stylesheet" href="/icons/css/academicons.min.css"/>
 		<script defer src="/icons/fontawesome/on-server/js/fontawesome-all.js"></script>
+		
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/font-awesomeLF.min.css.css">
+        	<link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
+       		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href="css/style.css">
+        	<link id="theme-style" rel="stylesheet" href="css/styles/mit.css">
+
+
+		
 	</head>
 	<body>
 		<nav>
