--- a/index.html
+++ b/index.html
@@ -14,8 +14,32 @@
 		<link rel="stylesheet" href="css/style.css">
         	<link id="theme-style" rel="stylesheet" href="css/styles/mit.css">
 
+		<!--Javascript files-->
+		<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+		<script type="text/javascript" src="js/TweenMax.min.js"></script>
+		<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+		<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
 
-		
+		<script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
+		<script type="text/javascript" src="js/jquery.dropdownit.js"></script>
+
+		<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
+		<script type="text/javascript" src="js/ScrollToPlugin.min.js"></script>
+
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+		<script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
+
+		<script type="text/javascript" src="js/masonry.min.js"></script>
+
+		<script type="text/javascript" src="js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
+
+		<script type="text/javascript" src="js/magnific-popup.js"></script>
+		<script type="text/javascript" src="js/custom.js"></script>
+		<script type="text/javascript" async
+	  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
+</script>
+
 	</head>
 	<body>
 		<nav>
